[gd_scene load_steps=4 format=3 uid="uid://c7b4ewdh8k1px"]

[ext_resource type="Script" uid="uid://cxlgu4h4d8eh5" path="res://Card.gd" id="1_dd2wi"]
[ext_resource type="Texture2D" uid="uid://dgr3vyn6sdb1f" path="res://mago (1).png" id="2_hael8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4fkt"]
size = Vector2(128, 129)

[node name="Card" type="Area2D"]
script = ExtResource("1_dd2wi")

[node name="Artwork" type="Sprite2D" parent="."]
texture = ExtResource("2_hael8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_u4fkt")

[node name="NameLabel" type="Label" parent="."]
offset_left = -59.0
offset_top = -60.0
offset_right = 7.0
offset_bottom = -37.0

[node name="CostLabel" type="Label" parent="."]
offset_left = 17.0
offset_top = -59.0
offset_right = 57.0
offset_bottom = -36.0

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = -51.0
offset_top = 28.0
offset_right = 54.0
offset_bottom = 51.0
